# stablecoin

./: Anchor.toml
programs/stablecoin/: Cargo.toml
programs/stablecoin/src/: lib.rs
