[package]
name = "stablecoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
switchboard-v2 = "0.4.0"
proc-macro2 = "1.0.66"  # Pin to a specific version

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"